; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_input-file.c_input_file_push.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_input-file.c_input_file_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.saved_file = type { i32, i64, i32, i32 }

@f_in = common dso_local global i32 0, align 4
@file_name = common dso_local global i32 0, align 4
@preprocess = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @input_file_push() #0 {
  %1 = alloca %struct.saved_file*, align 8
  %2 = call i64 @xmalloc(i32 24)
  %3 = inttoptr i64 %2 to %struct.saved_file*
  store %struct.saved_file* %3, %struct.saved_file** %1, align 8
  %4 = load i32, i32* @f_in, align 4
  %5 = load %struct.saved_file*, %struct.saved_file** %1, align 8
  %6 = getelementptr inbounds %struct.saved_file, %struct.saved_file* %5, i32 0, i32 3
  store i32 %4, i32* %6, align 4
  %7 = load i32, i32* @file_name, align 4
  %8 = load %struct.saved_file*, %struct.saved_file** %1, align 8
  %9 = getelementptr inbounds %struct.saved_file, %struct.saved_file* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load i64, i64* @preprocess, align 8
  %11 = load %struct.saved_file*, %struct.saved_file** %1, align 8
  %12 = getelementptr inbounds %struct.saved_file, %struct.saved_file* %11, i32 0, i32 1
  store i64 %10, i64* %12, align 8
  %13 = load i64, i64* @preprocess, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %0
  %16 = call i32 (...) @app_push()
  %17 = load %struct.saved_file*, %struct.saved_file** %1, align 8
  %18 = getelementptr inbounds %struct.saved_file, %struct.saved_file* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  br label %19

19:                                               ; preds = %15, %0
  %20 = call i32 (...) @input_file_begin()
  %21 = load %struct.saved_file*, %struct.saved_file** %1, align 8
  %22 = bitcast %struct.saved_file* %21 to i8*
  ret i8* %22
}

declare dso_local i64 @xmalloc(i32) #1

declare dso_local i32 @app_push(...) #1

declare dso_local i32 @input_file_begin(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
